# dead_hand

./: .gitmodules  CMakeLists.txt  README.md
cmake/: fetch_deps.cmake  find_deps.cmake
src/: CMakeLists.txt  cli.cpp  cli.h  ids.h  main.cpp  president.cpp  president.h  registries.cpp  registries.h  registries_manager.cpp  registries_manager.h  registry.cpp  registry.h
src/cli/: cli.cpp  cli.h
src/comms/: attachment.cpp  attachment.h  base.h  email.cpp  email.h  exc.h
src/comms/base/: attachment.h  channel.h  message.h
src/config/: base.h  config.cpp  config.h  email.cpp  email.h  protocols.h
src/in/: version.h.in
src/protocols/: base.h  dmsg.cpp  dmsg.h
src/util/: crypto.cpp  crypto.h  crypto_registry.h  email.cpp  email.h  encrypted.h  global_id.h  http.h  pointers.h  raii.h  serializable.h  url.cpp  url.h  www.cpp  www.h
src/util/www/: email.cpp  email.h  host.cpp  host.h  media.cpp  media.h  url.cpp  url.h
test/: CMakeLists.txt  test_util.cpp
